log
Thu Mar 19 07:08:05 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:19: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   57 |    int elemento = first(L);
      |                   ^~~~~
exercises.c:58:20: error: comparison between pointer and integer [-Werror]
   58 |    while (elemento != NULL)
      |                    ^~
exercises.c:61:19: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          elemento = next(L);
      |                   ^
cc1: all warnings being treated as errors
3b6b359
Thu Mar 19 07:08:54 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:19: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   57 |    int elemento = (int *)first(L);
      |                   ^
exercises.c:58:20: error: comparison between pointer and integer [-Werror]
   58 |    while (elemento != NULL)
      |                    ^~
exercises.c:61:19: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          elemento = next(L);
      |                   ^
cc1: all warnings being treated as errors
6cb4306
Thu Mar 19 07:11:38 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:19: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   57 |    int elemento = (int)first(L);
      |                   ^
exercises.c:58:20: error: comparison between pointer and integer [-Werror]
   58 |    while (elemento != NULL)
      |                    ^~
exercises.c:61:21: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   61 |          elemento = (int)next(L);
      |                     ^
cc1: all warnings being treated as errors
41cb9c0
Thu Mar 19 07:23:44 PM UTC 2026: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:19: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   57 |    int elemento = (int*)first(L);
      |                   ^
exercises.c:58:20: error: comparison between pointer and integer [-Werror]
   58 |    while (elemento != NULL)
      |                    ^~
exercises.c:61:19: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          elemento = (int*)next(L);
      |                   ^
exercises.c: In function ‘copia_pila’:
exercises.c:88:10: error: storage size of ‘pAux’ isn’t known
   88 |    Stack pAux;
      |          ^~~~
exercises.c:88:10: error: unused variable ‘pAux’ [-Werror=unused-variable]
cc1: all warnings being treated as errors
f9c166c
Thu Mar 19 07:24:21 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   60 |          n += elemento;
      |            ^~
exercises.c: In function ‘copia_pila’:
exercises.c:88:10: error: storage size of ‘pAux’ isn’t known
   88 |    Stack pAux;
      |          ^~~~
exercises.c:88:10: error: unused variable ‘pAux’ [-Werror=unused-variable]
cc1: all warnings being treated as errors
d1659d9
Thu Mar 19 07:33:55 PM UTC 2026: 
 exercises.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:69:14: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   69 |    int aux = first(L);
      |              ^~~~~
exercises.c:70:15: error: comparison between pointer and integer [-Werror]
   70 |    while (aux != NULL)
      |               ^~
exercises.c:73:14: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   73 |          aux = next(L);
      |              ^
cc1: all warnings being treated as errors
294d88e
Thu Mar 19 07:35:30 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:69:14: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   69 |    int aux = (int)first(L);
      |              ^
exercises.c:70:15: error: comparison between pointer and integer [-Werror]
   70 |    while (aux != NULL)
      |               ^~
exercises.c:73:16: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   73 |          aux = (int)next(L);
      |                ^
cc1: all warnings being treated as errors
8ca42ca
Thu Mar 19 07:35:52 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:69:14: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   69 |    int aux = (int*)first(L);
      |              ^
exercises.c:70:15: error: comparison between pointer and integer [-Werror]
   70 |    while (aux != NULL)
      |               ^~
exercises.c:73:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   73 |          aux = (int*)next(L);
      |              ^
cc1: all warnings being treated as errors
7c60519
Thu Mar 19 07:36:34 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:72:19: error: comparison between pointer and integer [-Werror]
   72 |          if (elem == aux) popCurrent(L);
      |                   ^~
cc1: all warnings being treated as errors
61a12b3
Thu Mar 19 07:42:57 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 20/70
bbbbc8b
Thu Mar 19 07:47:18 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   60 |          n += aux;
      |            ^~
f0fe1b9
Thu Mar 19 07:47:42 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
c32052c
Thu Mar 19 07:54:20 PM UTC 2026: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:26: error: passing argument 2 of ‘pushCurrent’ makes pointer from integer without a cast [-Wint-conversion]
   49 |          pushCurrent(L, i+ 1);
      |                         ~^~~
      |                          |
      |                          int
In file included from exercises.c:6:
arraylist.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushCurrent(List *L, void *dato);
      |                           ~~~~~~^~~~
838bbba
Thu Mar 19 07:56:55 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
cd34229
Thu Mar 19 07:59:17 PM UTC 2026: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:26: error: passing argument 2 of ‘pushCurrent’ makes pointer from integer without a cast [-Wint-conversion]
   51 |          pushCurrent(L, i+ 1);
      |                         ~^~~
      |                          |
      |                          int
In file included from exercises.c:6:
arraylist.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushCurrent(List *L, void *dato);
      |                           ~~~~~~^~~~
47a2c31
